package entities;

public class InvalidZoomException extends Exception {
    public InvalidZoomException(String message) {
        super(message);
    }
}